Comments API swagger implementation and error fixing
